# QD-odin-build

./: .gitattributes  .gitignore  CHANGELOG.rst  Dockerfile  ODNProcServ.edl  README.md  README.rst
adodin-config/: xspress_expanded_8ch.substitutions
config/adodin/: xspress_expanded_2ch.substitutions  xspress_expanded_4ch.substitutions
config/epics/: RELEASE.local
edm_config/: fonts.list  fonts.list.diamond
epics-config/: synapp_modules
epics_config/: xspress_IOC_RELEASE
odin-config/common/: launch_gui.sh
odin-config/mk1-2chan/: odin_server.cfg  proc_serv_ioc.boot
odin-config/mk1-8chan/: stMetaWriter.sh
odin-config/mk2-2chan/: odin_server.cfg
odin-config/mk2-4chan/: fp1.json  odin_server.cfg  stMetaWriter.sh
odin-config/mk2-8chan/: fp2.json  fp4.json  (+1 more)
python/: Pipfile  plot_data.py  pyproject.toml  requirements.txt  setup.cfg
python/src/pyxspress/: __init__.py
python/src/pyxspress/cli/: acquisition.py  create_config.py  list_mode_decode.py  list_mode_listener.py  plot_data.py
python/src/pyxspress/create_config/: config_generator.py  create.py
python/src/pyxspress/create_config/modules/: create_expanded_substitutions.py  create_folder.py  create_frame_processors.py  create_frame_receivers.py  create_gui.py  create_launch_yaml.py  create_meta_liveView.py  create_odin_launch_script.py  create_proc_serv_ioc.py  create_server_config.py
python/src/pyxspress/create_config/templates/: gui_button.template  launch_nchan_odin.sh.template
python/src/pyxspress/data/: __init__.py  file_reader_interface.py  xspress_file_reader.py  xspress_list_file_reader.py  xspress_mca_file_reader.py
python/src/pyxspress/gui/: chart.py  main_window.py
python/src/pyxspress/list_mode/: list_mode_decoder.py  list_mode_listener.py  list_mode_writer.py  run_listener.py
python/src/pyxspress/util/: util.py
scripts/: epics_build.sh  kill_odin.sh  odin_build.sh
server/: .bashrc_odin  copy_build_config.sh  copy_odin_config.sh  dependencies.sh  launch_8chan_odin.sh
tools/: TcpRelay
wheels/: pyxspress-0.5.0-py3-none-any.whl  pyxspress-0.6.0-py3-none-any.whl  pyxspress-0.7.0-py3-none-any.whl  pyxspress-0.7.1-py3-none-any.whl  pyxspress-0.7.2-py3-none-any.whl  pyxspress-0.7.3-py3-none-any.whl  pyxspress-0.7.4-py3-none-any.whl  pyxspress-0.7.5-py3-none-any.whl  pyxspress-0.7.6-py3-none-any.whl  pyxspress-0.7.7-py3-none-any.whl  pyxspress-0.7.8-py3-none-any.whl
(+90 files in other folders)
