[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxspress"
description = "Python module for testing Xspress Odin"
authors = [{name = "Ben Bradnick", email = "ben@quantumdetectors.com"}]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Licence :: Other/Proprietary License",
]
requires-python = ">=3.7"
dependencies = [
    "click",
    "h5py",
    "hdf5plugin",
    "importlib-metadata",
    "matplotlib",
    "numpy<2.0",
    "pyepics",
    "pyqt5",
    "PySide6",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://gitlab.com/qd-xspress3/qd-odin-build"

[project.optional-dependencies]
# Required packages for development
dev = [
    "black",
    "build",
    "coverage",
    "flake8",
    "isort",
    "mock",
    "mypy",
    "pip-licenses",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
    "pytest-qt",
    "sphinx",
    "sphinx-rtd-theme",
    "typing-extensions",
]

[project.scripts]
xspress-acquire = "pyxspress.cli.acquisition:main"
xspress-list-mode-listener = "pyxspress.cli.list_mode_listener:main"
xspress-list-mode-decode = "pyxspress.cli.list_mode_decode:main"
xspress-plot = "pyxspress.cli.plot_data:main"
xspress-view = "pyxspress.cli.data_gui:main"

[tool.setuptools]
# Use the src directory for the package
package-dir = {"" = "src"}
# Required packages to run the main application
license-files = ["LICENCE.rst"]
include-package-data = false

[tool.setuptools.packages.find]
# Find packages in the src directory
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = ["VERSION.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=native -vv --cov=pyxspress --cov-fail-under=90 --cov-report term --cov-report xml --log-format='%(asctime)s.%(msecs)03d %(filename)-25s %(lineno)4d %(levelname)-8s %(message)s' --log-date-format='%Y-%m-%d %H:%M:%S'"
testpaths = [
    "tests",
]
env = [
    "CITESTS",  # Inform the module we are unit testing
    "QT_QPA_PLATFORM=offscreen",  # Offscreen GUI required for CI testing
]
